--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@ Klik untuk baca: https://www.idntimes.com/automotive/car/ndoro-anom/toyota-fortu
                 <p>Toyota Fortuner 2025 kemungkinan akan mengadopsi sasis tangga TNGA-F, sasis yang juga dipakai di Land Cruiser 250 dan Tacoma. Sasis canggih ini diklaim mampu menyesuaikan beragam dimensi kendaraan serta mendukung penggerak roda semua-konfigurasi, baik bagian depan maupun belakang.&nbsp;</p><p>Sasis yang ringan namun rigid tersebut akan membuat laju Fortuner 2025 lebih stabil dibandingkan varian sebelumnya. Selain sasis yang canggih, Toyota Fortuner juga akan dibekali beragam fitur canggih, seperti Adaptive Cruise Control, Blind Spot Monitoring, Lane Departure Warning, dan Toyota Safety Sense.&nbsp;</p><p>Berapa harga Toyota Fortuner 2025? Sayangnya sampai saat ini belum ada bocora berapa mobil ini akan dibanderol. Tertairk?</p>
             </article>
         </div>
-        <aside>
+        <aside class="aside">
+            <figure>
             <img src="image/pajero.avif">
             <figcaption>toyota-fortuner</figcaption>
+        </figure>
             <p>
                 PT Toyota Astra Honda Motor Motor akan meluncurkan Toyota Fortuner 2025 pada Jumat 6 September 2024. Mobil bergenre SUV ini diprediksi akan hadir dengan desain yang jauh lebih sporty dan mewah.Selain itu Toyota Fortuner 2025 juga disebut-sebut bakal mendapat sentuhan baru di sektor mesin, membuat tenaganya meningkat tanpa harus mengonsumsi lebih banyak.Berikut bocoran Toyota Fortuner 2025
 
